Add - Add clean_record keyword

--- a/app/views/layouts/record.html.erb
+++ b/app/views/layouts/record.html.erb
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Sticky Footer Template for Bootstrap</title>
+    <title>Record</title>
 
     <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
     <link href="https://maxcdn.bootstrapcdn.com/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
